<resources>
    <string name="app_name" translatable="false">StoryApp</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="required">Required</string>
    <string name="minimum_password_char">Minimum 6 Character</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="email_already_taken">Email is already taken</string>
    <string name="or"> or </string>
    <string name="logout_ask">Are you sure want to logout?</string>
    <string name="label_button" translatable="false">LABEL_BUTTON</string>
    <string name="label_hint" translatable="false">LABEL_HINT</string>
    <string name="label_title" translatable="false">LABEL_TITLE</string>
    <string name="label_description" translatable="false">LABEL_DESCRIPTION</string>
    <string name="label_date" translatable="false">LABEL_DATE</string>
    <string name="button_login">login</string>
    <string name="button_register">register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="dont_have_an_account">Do not have an account?</string>
    <string name="image_story">Image story</string>
    <string name="email_hint">Email</string>
    <string name="bagikan_ceritamu_di_nstoryku">Share your story in\nStoryKu</string>
    <string name="password_hint">Password</string>
    <string name="label_ask" translatable="false">LABEL_ASK</string>
    <string name="name_hint">Name</string>
    <string name="icon_user">icon user</string>
    <string name="settings">settings</string>
    <string name="log_out">log out</string>
    <string name="login_failed">Login failed</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="user_created_trying_to_login">Register success.\nTrying to login</string>
    <string name="btn_camera">Camera</string>
    <string name="btn_gallery" translatable="false">Gallery</string>
    <string name="btn_upload" translatable="false">Upload</string>
    <string name="image">Image</string>
    <string name="cant_get_permission">can not get permission</string>
    <string name="please_insert_an_image">Please insert an image</string>
    <string name="fab_content_desc">Add story</string>
    <string name="story_created">Story created</string>
    <string name="no_data">No data</string>
    <string name="failed_getting_image">Failed getting image</string>
    <string name="failed_launch_camera">Failed launch camera.</string>
    <string name="retry">Try again</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="find_story_by_map" translatable="false">Find Story By Map</string>
</resources>