<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.AuthActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivUser"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_baseline_account_circle_64"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/bagikan_ceritamu_di_nstoryku"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivUser" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/ivUser"
            app:layout_constraintStart_toStartOf="@+id/ivUser"
            app:layout_constraintTop_toBottomOf="@+id/tvTagline">

            <com.example.storyapp.core.component.CustomEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/email_hint"
            app:layout_constraintEnd_toEndOf="@+id/ivUser"
            app:layout_constraintStart_toStartOf="@+id/ivUser"
            app:layout_constraintTop_toBottomOf="@+id/cName">

            <com.example.storyapp.core.component.CustomEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/password_hint"
            app:layout_constraintEnd_toEndOf="@+id/ivUser"
            app:layout_constraintStart_toStartOf="@+id/ivUser"
            app:layout_constraintTop_toBottomOf="@+id/cEmail">

            <com.example.storyapp.core.component.CustomEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnAuth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/label_button"
            app:layout_constraintEnd_toEndOf="@+id/ivUser"
            app:layout_constraintStart_toStartOf="@+id/ivUser"
            app:layout_constraintTop_toBottomOf="@+id/cPassword" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/ivUser"
            app:layout_constraintStart_toStartOf="@+id/ivUser"
            app:layout_constraintTop_toBottomOf="@+id/btnAuth">

            <TextView
                android:id="@+id/tvAsk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/label_ask" />

            <com.example.storyapp.core.component.CustomButton
                android:id="@+id/btnAuthContrast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_button" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>